dump changes