@@ -39,29 +39,4 @@ dependencies {
     // Use this as API so customers can provide objects serializations without
     // needing to add it as a dependency to their app
     api(Dependencies.kotlinxSerializationJson)
-
-    testImplementation(Dependencies.mockito)
-    testImplementation(Dependencies.mockitoKotlin)
-    testImplementation(Dependencies.robolectric)
-
-    testImplementation(Dependencies.mockk)
-    testImplementation(Dependencies.coroutinesTest)
-
-    testImplementation(platform(Dependencies.junitBom))
-    testImplementation(Dependencies.junitJupiter)
-
-    // enables running JUnit 4 tests within the JUnit 5 (jupiter) platform.
-    testRuntimeOnly(Dependencies.junitVintageEngine)
-}
-
-tasks.withType(Test).configureEach {
-    useJUnitPlatform()
-    filter {
-        excludeTestsMatching("*Integration*")
-    }
-    ignoreFailures = true
-    // https://github.com/mockk/mockk/issues/681
-    jvmArgs("--add-opens", "java.base/java.time=ALL-UNNAMED",
-            "--add-opens", "java.base/java.util=ALL-UNNAMED"
-    )
 }
